<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Schibsted Products & Technology AS. Licensed under the terms of the MIT license. See LICENSE in the project root.
  -->

<resources>
    <!--Identification-->
    <string name="schacc_identification_title">Log in or create account</string>
    <string name="schacc_identification_login_only_title">Log in</string>
    <string name="schacc_identification_help_link">https://info.privacy.schibsted.com/en/S010</string>
    <string name="schacc_identification_help_link_text">What is Schibsted account?</string>

    <string name="schacc_identification_internal_information">%1$s is part of Schibsted. You\'ll need  a Schibsted account to continue. You can use this account across all Schibsted sites.</string>
    <string name="schacc_identification_external_information">%1$s collaborates with Schibsted. You\'ll need a Schibsted account to continue. You can use this account across all Schibsted sites.</string>
    <string name="schacc_mobile_identification_error">Please enter a valid phone number.</string>
    <string name="schacc_mobile_number_label">Enter your phone number</string>
    <string name="schacc_mobile_number_hint">123456789</string>
    <string name="schacc_mobile_prefix_hint">+%1$d</string>

    <string name="schacc_email_identification_error">Please enter a valid email address.</string>
    <string name="schacc_email_already_in_use_error">Email already in use. Please login or use a different email.</string>

    <string name="schacc_email_label">Enter your email address</string>
    <!--Verification-->
    <string name="schacc_verification_title">We sent you a code</string>
    <string name="schacc_verification_code_label">Enter your code</string>
    <string name="schacc_verification_error">Please check your code and try again.</string>
    <string name="schacc_verification_resend_code_value">Resend the code</string>
    <string name="schacc_verification_dialog_title">We sent you a new verification code</string>
    <string name="schacc_verification_dialog_information">The code was sent to: \n%1$s</string>
    <string name="schacc_verification_dialog_ok">OK</string>
    <string name="schacc_verification_edit_phone_number">Use a different phone number</string>
    <string name="schacc_verification_edit_email_address">Use a different email address</string>
    <!--Terms-->
    <string name="schacc_terms_title">Terms of use</string>
    <string name="schacc_terms_sign_up_description">To create your Schibsted account, you need to accept this terms of use.</string>
    <string name="schacc_terms_sign_in_description">To log in with your Schibsted account, you need to accept this terms of use. If you don’t accept you will be logged out</string>
    <string name="schacc_terms_terms_error">Please accept the terms and conditions to continue.</string>
    <string name="schacc_terms_policy">I accept the terms and conditions for %1$s and %2$s</string>
    <string name="schacc_terms_policy_spid_only">I accept the terms and conditions for %1$s</string>
    <string name="schacc_terms_update_link_label">Learn more about the update</string>
    <string name="schacc_accept">Accept</string>
    <!--Terms update dialog-->
    <string name="schacc_terms_update_title">Updated terms and conditions</string>
    <!--Required fields-->
    <string name="schacc_required_fields_title">Finalise</string>
    <string name="schacc_required_fields_description">We use this information for things like improving our services and giving you relevant ads and content.</string>
    <string name="schacc_required_fields_error">This field is required.</string>
    <string name="schacc_required_field_given_name">First name</string>
    <string name="schacc_required_field_family_name">Last name</string>
    <string name="schacc_required_field_gender">Gender</string>
    <string name="schacc_required_field_birthday">Birthday</string>
    <string name="schacc_required_field_address_home">Home address</string>
    <string name="schacc_required_field_address_delivery">Delivery Address</string>
    <string name="schacc_required_field_address_invoice">Invoice address</string>
    <string name="schacc_required_field_email">Email address</string>
    <string name="schacc_required_field_display_name">Display Name</string>
    <string name="schacc_required_field_phone_number">Phone number</string>
    <string name="schacc_required_fields_birthday_hint">YYYY-MM-DD</string>
    <string name="schacc_required_fields_birthday_error">@string/schacc_required_fields_birthday_hint</string>
    <string name="schacc_required_fields_gdpr_description">You can adjust your privacy choices at any time or learn more about Schibsted, data and you.</string>
    <string name="schacc_required_fields_schibsted_data">adjust your privacy choices at any time</string>
    <string name="schacc_required_fields_privacy_adjustment">learn more about Schibsted, data and you.</string>
    <string name="schacc_required_fields_schibsted_data_link">https://info.privacy.schibsted.com/en/S012</string>
    <string name="schacc_required_fields_privacy_adjustment_link">https://info.privacy.schibsted.com/en/S007</string>
    <!--Password-->
    <string name="schacc_password_change_phone_number">Change phone number</string>
    <string name="schacc_password_change_email">Change email</string>
    <string name="schacc_password_sign_in_label">Enter your password</string>
    <string name="schacc_password_sign_up_label">Choose your password</string>
    <string name="schacc_password_sign_up_button_label">Create account</string>
    <string name="schacc_password_sign_up_notification">You are now creating a new Schibsted account</string>
    <string name="schacc_password_sign_up_have_account_button_label">I have an account</string>
    <string name="schacc_password_error_length">Your password should have at least 8 characters.</string>
    <string name="schacc_password_forgot_password">Forgot password?</string>
    <string name="schacc_password_extra_info">Minimum 8 characters</string>
    <string name="schacc_password_error_incorrect">The password you entered is incorrect. Please try again.</string>
    <!--Inbox-->
    <string name="schacc_inbox_information">We sent a verification link to: %1$s</string>
    <string name="schacc_inbox_change_identifier">Use a different address</string>
    <string name="schacc_inbox_resend_link">Resend the email</string>
    <string name="schacc_inbox_dialog_title">We sent you a new verification link</string>
    <string name="schacc_inbox_dialog_information">The code was sent to: \n%1$s</string>
    <string name="schacc_inbox_check_inbox_title">Check your inbox</string>
    <!--Web view-->
    <string name="schacc_web_forgot_password_title">Forgot password?</string>
    <string name="schacc_web_need_help_title">@string/schacc_identification_help_link_text</string>
    <!--Generic-->
    <string name="schacc_spid_label">Schibsted account</string>
    <string name="schacc_next_step">Continue</string>
    <string name="schacc_welcome_back_title">Welcome back</string>
    <string name="schacc_register_title">Create account</string>
    <string name="schacc_ok">OK</string>
    <string name="schacc_identifier_modifier">Not you?</string>
    <string name="schacc_age_limit_information">You need to be at least 16 years old to create a Schibsted account</string>
    <string name="schacc_remember_me">Remember me on this device</string>
    <string name="schacc_remember_me_info">What\'s this?</string>
    <string name="schacc_dialog_remember_me_title">@string/schacc_remember_me</string>
    <string name="schacc_dialog_remember_me_description">This means we will store information about your session on your device to keep you logged in. You can change this option later by logging out.</string>
    <!--Generic error messages-->
    <string name="schacc_generic_exception_error_message_title">Something went wrong!</string>
    <string name="schacc_generic_time_out_error_message">The connection has timed out. Please try again.</string>
    <string name="schacc_generic_server_error_message">We are experiencing problems at the moment. Please try again later.</string>
    <string name="schacc_generic_internet_error">Unable to connect to the internet. Please check your connection.</string>
    <string name="schacc_generic_too_many_code_request_error_message">You have sent too many code requests. Please try again later.</string>
    <string name="schacc_generic_too_many_login_request_error_message">You have tried to log in too many times. Please try again later.</string>
    <string name="schacc_generic_too_many_inbox_request_error_message">You have sent too many link requests. Please try again later.</string>
    <string name="schacc_generic_error">Please try again later.</string>
    <string name="schacc_display_name_error">Only letters and digits are allowed with optional single dashes, underscores, dots &amp; spaces in between.</string>
    <!--System-->
    <string name="schacc_close">Close</string>
    <string name="schacc_intent_password_sign_up_link_name">signupDeepLink</string>
    <!-- Required config values -->
    <string translatable="false" name="schacc_conf_client_name" />
    <string translatable="false" name="schacc_conf_redirect_scheme" />
    <string translatable="false" name="schacc_conf_redirect_host" />
    <!-- Optional config values -->
    <string translatable="false" name="schacc_conf_locale">schacc_locale</string>
    <string translatable="false" name="schacc_conf_signup_enabled">schacc_signup_enabled</string>
    <string translatable="false" name="schacc_conf_signup_disabled_message">schacc_signup_disabled_message</string>
    <string translatable="false" name="schacc_conf_cancellable">schacc_cancellable</string>
    <string translatable="false" name="schacc_conf_client_logo">schacc_client_logo</string>
    <string translatable="false" name="schacc_conf_remember_me">schacc_remember_me</string>
    <!-- Accessability -->
    <string name="schacc_accessibility_password">Password</string>
    <string name="schacc_accessibility_login_id">Logging in with %1$s</string>
    <string name="schacc_accessibility_signup_id">Creating account for %1$s</string>
    <string name="schacc_accessibility_verification_code_no">Verification code number %1$d of %2$d</string>
    <string name="schacc_accessibility_input_format">%1$s in %2$s format</string>
</resources>
