<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Schibsted Products & Technology AS. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/schacc_container">

    <com.schibsted.account.ui.ui.component.AccountSelectorView
        android:id="@+id/account_selector_view"
        style="@style/schacc_text.bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:actionText="@string/schacc_identifier_modifier"
        tools:text="spiduser@example.com" />

    <com.schibsted.account.ui.ui.component.PasswordView
        android:id="@+id/password_input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_selector_view"
        android:layout_marginTop="16dp"
        app:errorText="@string/schacc_password_error_length"
        app:imeOptions="done"
        app:layout_constraintTop_toBottomOf="@+id/account_selector_view" />

    <com.schibsted.account.ui.ui.component.CheckBoxView
        android:id="@+id/keep_me_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_view" />

    <com.schibsted.account.ui.ui.component.LoadingButton
        android:id="@+id/password_button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/mobile_password_button_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/schacc_next_step" />

    <Button
        android:id="@+id/mobile_password_button_forgot"
        style="@style/schacc_widget.button.secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schacc_password_forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
